Bug 573969 - innerHTML getter on <xmp> is no longer special-cased, causing tuenti.com to display unparsed markup r=sicking