content/html/content/src/nsHTMLElement.cpp
@@ -58,6 +58,8 @@ public:
   // nsIDOMHTMLElement
   NS_FORWARD_NSIDOMHTMLELEMENT(nsGenericHTMLElement::)
 
+  virtual nsresult GetInnerHTML(nsAString& aInnerHTML);
+
   nsresult Clone(nsINodeInfo* aNodeInfo, nsINode** aResult) const;
 };
 
@@ -90,4 +92,23 @@ NS_INTERFACE_TABLE_HEAD(nsHTMLElement)
 NS_HTML_CONTENT_INTERFACE_TABLE_TAIL_CLASSINFO(HTMLElement)
 
 NS_IMPL_ELEMENT_CLONE(nsHTMLElement)
+
+nsresult
+nsHTMLElement::GetInnerHTML(nsAString& aInnerHTML)
+{
+  /**
+   * nsGenericHTMLElement::GetInnerHTML escapes < and > characters (at least).
+   * .innerHTML should return the HTML code for xmp and plaintext element.
+   *
+   * This code is a workaround until we implement a HTML5 Serializer
+   * with this behavior.
+   */
+  if (mNodeInfo->Equals(nsGkAtoms::xmp) ||
+      mNodeInfo->Equals(nsGkAtoms::plaintext)) {
+    nsContentUtils::GetNodeTextContent(this, PR_FALSE, aInnerHTML);
+    return NS_OK;
+  }
+
+  return nsGenericHTMLElement::GetInnerHTML(aInnerHTML);
+}
 
